bracket colour fix, enable code wrap

--- a/www/less/main.less
+++ b/www/less/main.less
@@ -84,17 +84,12 @@ body{
 			li {
 				position: relative;
 				pre {
-				width: -moz-calc(~"100% - 620px");
-				width: -webkit-calc(~"100% - 620px");
-				width: -o-calc(~"100% - 620px");
-				width: calc(~"100% + 620px");
+					width: -moz-calc(~"100% - 620px");
+					width: -webkit-calc(~"100% - 620px");
+					width: -o-calc(~"100% - 620px");
+					width: calc(~"100% + 620px");
 					padding-left: calc(~"100% + 40px");
-					// 
-				 overflow: inherit;
-				 code{
-				 	
-				 }
-				   
+				 	overflow: inherit;
 				}
 			}
 			ul,p,pre,h1,h2,h3,h4,h5,h6,blockquote {
@@ -233,7 +228,6 @@ a{
 			.content {
 				pre {
 					width: 100%;
-					
 					overflow-x: auto;
 					float: none;
 					code {
